tests/errors/program.panic.art
print "done"
x: 2
if x = 2 -> panic "System crashed"
print "system didn't crash"